--- a/templates/pages/sks-admin-interface/admin-notifications.html
+++ b/templates/pages/sks-admin-interface/admin-notifications.html
@@ -123,7 +123,7 @@
             </div>
                 <div class="rejection-container">
                     <label for="reason">Rejection Reason:</label>
-                    <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
+                    <input type="text" class="form-control" name="reason_{{ act.id }}" id="reason_{{ act.id }}" placeholder="Enter rejection reason">
                 </div>
 
             </div>
@@ -175,7 +175,7 @@
             </div>     
                 <div class="rejection-container">
                     <label for="reason">Rejection Reason:</label>
-                    <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
+                    <input type="text" class="form-control" name="reason_{{ post.id }}" id="reason_{{ post.id }}" placeholder="Enter rejection reason">
                 </div>
     </div>
     {% endfor %}
@@ -197,10 +197,10 @@
                     <div class="edit-request notif-request" data-type="post" data-oldtitle = "{{ post.eventtitle }}"
                         data-oldimage = "{{ post.image.url }}"
                     data-olddescription = "{{ post.description }}"
-
                     data-editedtitle = "{{ post.edit_post.eventtitle }}"
                     data-editedimage = "{{ post.edit_post.image.url }}"
                 data-editeddescription = "{{ post.edit_post.description }}">
+                <div class="req-text-checkboxes">
                 <img src="{{ post.clubname.profileimg.url }}" alt="club logo">
                 <div class="req-text"><strong class="club-name">{{ post.clubname }}</strong> sent an edit post event request <span class="view-interface-btn">view</span></div>
                 
@@ -232,9 +232,10 @@
 
 
                     </div>
+                    </div>
                     <div class="rejection-container">
                         <label for="reason">Rejection Reason:</label>
-                        <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
+                        <input type="text" class="form-control" name="reason_{{ post.edit_post.id }}" id="reason_{{ post.edit_post.id }}" placeholder="Enter rejection reason">
                     </div>
             </div>
 
@@ -284,13 +285,12 @@
                     </div>
 
                  </div>
-                 <div >
-                    
-                </div>
-                <div class="rejection-container">
-                    <label for="reason">Rejection Reason:</label>
-                <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
-                </div>
+           
+                    <div class="rejection-container">
+                        <label for="reason">Rejection Reason:</label>
+                        <input type="text" class="form-control" name="reason_{{ event.edit_event.id }}" id="reason_{{ event.edit_event.id }}" placeholder="Enter rejection reason">
+                    </div>
+
             </div>
                 {% endif %}
                 {% endfor %}
