--- a/ClubConnect/static/css/userType.css
+++ b/ClubConnect/static/css/userType.css
@@ -182,6 +182,64 @@ body{
         width: 92%;
     }
   }
+
+  @media screen and (max-width: 480px){
+    .user-container{
+        width: 95%;
+        padding: 15px;
+    }
+    .user-container h1{
+        font-size: 1.5rem;
+    }
+    .type-of-user{
+        gap: 10px;
+        margin-top: 30px;
+    }
+    .type-of-user button{
+        padding: 8px;
+        font-size: 0.9rem;
+    }
+    .login-signup-form input{
+        width: 60vw;
+        height: 25px;
+        font-size: 14px;
+    }
+    .login-signup-form form h1{
+        font-size: 30px;
+    }
+    .reg-btn{
+        width: 60%;
+        padding: 8px 0;
+        font-size: 0.9rem;
+    }
+  }
+
+  @media screen and (max-width: 360px){
+    .user-container{
+        width: 98%;
+        padding: 10px;
+    }
+    .user-container h1{
+        font-size: 1.3rem;
+    }
+    .type-of-user button{
+        padding: 6px;
+        font-size: 0.8rem;
+    }
+    .login-signup-form input{
+        width: 65vw;
+        height: 22px;
+        font-size: 13px;
+    }
+    .login-signup-form form h1{
+        font-size: 25px;
+    }
+    .reg-btn{
+        width: 70%;
+        padding: 6px 0;
+        font-size: 0.8rem;
+    }
+  }
 /*End Registration*/
 
 /*Start Footer*/
