--- a/templates/pages/all-users-interface/homepage.html
+++ b/templates/pages/all-users-interface/homepage.html
@@ -1,19 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}ClubConnect | Uskudar Universitesi Events{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+{% endblock %}
+
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
-    <title>ClubConnect | Uskudar Universitesi Events</title>
-</head>
 <body id="home">
 
 <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -132,11 +126,8 @@
         </a>
     </div>
 </div>
-
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'js/all.min.js' %}"></script>
-<script src="{% static 'js/navbar.js' %}"></script>
-<script src="{% static 'js/script.js' %}"></script>
-</body>
-</html>
 {% endblock content %}
+
+{% block extra_js %}
+<script src="{% static 'js/script.js' %}"></script>
+{% endblock %}
